# UC_state_machine

./: readme.md
am_traj/example0/: CMakeLists.txt  package.xml
am_traj/example0/config/: Mid360_traj.rviz  example0_params.yaml
am_traj/example0/launch/: amcl.launch  example0.launch  map_server.launch  traj_plan.launch  traj_plan_3D.launch  traj_plan_3D_Mid360.launch  wtr_joy.launch
am_traj/example0/map/: t3_-139.yaml
am_traj/example0/msg/: joint.msg
am_traj/example0/src/: example0_node.cpp  readme.md  t3_nav_node.cpp  traj_plan.cpp  traj_plan_3D.cpp  wtr_joy.cpp
assembly/: CMakeLists.txt  package.xml  readme.md
assembly/config/: control.yaml  joint_names_assembly.yaml
assembly/include/gazebo/: Master.hh  Server.hh  gazebo.hh  gazebo_client.hh  gazebo_core.hh
assembly/include/gazebo/common/: Animation.hh  AudioDecoder.hh  BVHLoader.hh  Base64.hh  Battery.hh  ColladaLoader.hh  Color.hh  CommonIface.hh  CommonTypes.hh  Console.hh  Dem.hh  EnumIface.hh  Event.hh  Events.hh  Exception.hh  GTSMeshUtils.hh  HeightmapData.hh  Image.hh  ImageHeightmap.hh  KeyEvent.hh  KeyFrame.hh  Material.hh  MaterialDensity.hh  Mesh.hh  MeshCSG.hh  MeshLoader.hh  MeshManager.hh  ModelDatabase.hh  MouseEvent.hh  MovingWindowFilter.hh  OBJLoader.hh  PID.hh  Plugin.hh  STLLoader.hh  SVGLoader.hh  SemanticVersion.hh  SingletonT.hh  Skeleton.hh  SkeletonAnimation.hh  SphericalCoordinates.hh  (+9 more)
assembly/include/gazebo/gui/: Actions.hh  AlignWidget.hh  ApplyWrenchDialog.hh  CloneWindow.hh  ConfigWidget.hh  Conversions.hh  DataLogger.hh  Editor.hh  EntityMaker.hh  GLWidget.hh  GuiEvents.hh  GuiIface.hh  GuiPlugin.hh  GuiTypes.hh  InsertModelWidget.hh  JointControlWidget.hh  KeyEventHandler.hh  LayersWidget.hh  LightMaker.hh  LogPlayWidget.hh  MainWindow.hh  ModelAlign.hh  ModelListWidget.hh  ModelMaker.hh  ModelManipulator.hh  ModelRightMenu.hh  ModelSnap.hh  MouseEventHandler.hh  RenderWidget.hh  SaveEntityDialog.hh  SplashScreen.hh  TimePanel.hh  TimeWidget.hh  ToolsWidget.hh  TopToolbar.hh  TopicSelector.hh  UserCmdHistory.hh  ViewAngleWidget.hh  gui.hh
assembly/include/gazebo/msgs/: MsgFactory.hh  altimeter.pb.h  any.pb.h  atmosphere.pb.h  axis.pb.h  battery.pb.h  boxgeom.pb.h  camera_cmd.pb.h  camera_lens.pb.h  camerasensor.pb.h  cessna.pb.h  collision.pb.h  color.pb.h  contact.pb.h  contacts.pb.h  contactsensor.pb.h  cylindergeom.pb.h  density.pb.h  diagnostics.pb.h  distortion.pb.h  empty.pb.h  factory.pb.h  fluid.pb.h  fog.pb.h  friction.pb.h  geometry.pb.h  gps.pb.h  gps_sensor.pb.h  gui.pb.h  gui_camera.pb.h  gz_string.pb.h  gz_string_v.pb.h  header.pb.h  heightmapgeom.pb.h  hydra.pb.h  image.pb.h  image_stamped.pb.h  imagegeom.pb.h  images_stamped.pb.h  imu.pb.h  (+90 more)
assembly/include/gazebo/ode/: collision.h  collision_space.h  common.h  contact.h  error.h  export-dif.h  h5dump.h  mass.h  matrix.h  memory.h  misc.h  objects.h  ode.h  odecpp_collision.h  odeinit.h  odemath.h  rotation.h  timer.h
assembly/include/gazebo/physics/: Actor.hh  AdiabaticAtmosphere.hh  Atmosphere.hh  AtmosphereFactory.hh  BallJoint.hh  Base.hh  BoxShape.hh  Collision.hh  CollisionState.hh  Contact.hh  ContactManager.hh  CylinderShape.hh  Entity.hh  FixedJoint.hh  GearboxJoint.hh  Gripper.hh  HeightmapShape.hh  Hinge2Joint.hh  HingeJoint.hh  Inertial.hh  Joint.hh  JointController.hh  JointState.hh  JointWrench.hh  Light.hh  LightState.hh  Link.hh  LinkState.hh  MapShape.hh  MeshShape.hh  Model.hh  ModelState.hh  MultiRayShape.hh  PhysicsEngine.hh  PhysicsFactory.hh  PhysicsIface.hh  PhysicsTypes.hh  PlaneShape.hh  PolylineShape.hh  Population.hh  (+15 more)
assembly/include/gazebo/plugins/: ActorPlugin.hh  ActuatorPlugin.hh  ArduCopterPlugin.hh  ArrangePlugin.hh  AttachLightPlugin.hh  BlinkVisualPlugin.hh  BreakableJointPlugin.hh  BuoyancyPlugin.hh  CameraPlugin.hh  CartDemoPlugin.hh  CessnaGUIPlugin.hh  CessnaPlugin.hh  ContactPlugin.hh  DepthCameraPlugin.hh  DiffDrivePlugin.hh  ElevatorPlugin.hh  ElevatorPluginPrivate.hh  FiducialCameraPlugin.hh  FollowerPlugin.hh  ForceTorquePlugin.hh  GimbalSmall2dPlugin.hh  GpuRayPlugin.hh  HarnessPlugin.hh  HeightmapLODPlugin.hh  HydraDemoPlugin.hh  HydraPlugin.hh  ImuSensorPlugin.hh  InitialVelocityPlugin.hh  JointTrajectoryPlugin.hh  KeyboardGUIPlugin.hh  KeysToJointsPlugin.hh  LensFlareSensorPlugin.hh  LiftDragPlugin.hh  LinearBatteryConsumerPlugin.hh  LinearBatteryPlugin.hh  LinkPlot3DPlugin.hh  LookAtDemoPlugin.hh  ModelPropShop.hh  MudPlugin.hh  PlaneDemoPlugin.hh  (+20 more)
assembly/include/gazebo/rendering/: ApplyWrenchVisual.hh  ArrowVisual.hh  AxisVisual.hh  COMVisual.hh  (+48 more)
assembly/launch/: arbotix.launch  display.launch  gazebo.launch
assembly/meshes/: base_link.STL
assembly/models/robot/: assembly.sdf  model.config
assembly/src/: joint_controller.cc
assembly/urdf/: assembly.csv  assembly.urdf
assembly/world/: assembly.world
map_simulator/: CMakeLists.txt  package.xml
map_simulator/launch/: cloud_recorder.launch  my_map.launch
map_simulator/src/: cloud_publisher.cpp  cloud_recorder.cpp
wtr_race/: CMakeLists.txt  package.xml  readme.md
wtr_race/config/: camera.yaml  decaymap.rviz  decaymap.yaml  ost.yaml  traj.rviz  traj_params.yaml
wtr_race/include/astar/: astar.h
wtr_race/include/livox_lidar/: livox_lidar.h
wtr_race/include/wtr_fake_mavros/: read_from_stm32.h  write_to_stm32.h
wtr_race/include/wtr_mavros_msgs/: wtr_control.h  wtr_posture.h  wtr_zone.h
wtr_race/include/wtr_race/: wtr_am_traj.hpp
wtr_race/launch/: wtr_joy.launch  wtr_map_server.launch  wtr_race.launch  wtr_usb_cam.launch
wtr_race/launch/lidar/: decay_map.launch  wtr_decay_map.launch
wtr_race/launch/map/: wtr_map_server.launch
wtr_race/launch/visual/: wtr_astra.launch
wtr_race/map/: wtr_map.pgm  wtr_map.yaml
wtr_race/msg/: wtr_posture.msg
wtr_race/scripts/ros/: base2camera.py  video_tackle.py
wtr_race/scripts/unros/: img_tackle.py  video_tackle.py
wtr_race/src/: test.cpp  traj_plan_3D.cpp
wtr_race/src/astar/: astar.cpp
wtr_race/src/pointcloud/: decaymap_detect.cpp  pointcloud.cpp
wtr_race/src/tf/: base2camera.cpp
wtr_race/src/visual_dect/: loop_dect.cpp
(+333 files in other folders)
