<package format="2">
  <name>assembly2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for assembly</p>
    <p>This package contains configuration data, 3D models and launch files
for assembly robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <!-- <depend>gazebo_ros</depend> -->
  <export>
    <architecture_independent />
    <!-- <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/> -->
  </export>

</package>